changed files to reflect reservations not books

--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
 </div>
 <div class="topmenu">
 <table width="100%"><tr>
-<td width="16%"><p><a href="search.php">Search</a></p></td><td width="16%"><p><a href="addBook.php">Add Reservation</a></p></td><td width="16%"><p><a href="userindex.php">Users</a></p></td><td width="16%"><p><a href="bookindex.php">Calendar</a></p></td><td width="16%"><p><a href="editProfile.php">Profile</a></p></td><td width="16%"><p><a href="logout.php">Logout</a></p></td>
+<td width="16%"><p><a href="search.php">Search</a></p></td><td width="16%"><p><a href="addReservation.php">Add Reservation</a></p></td><td width="16%"><p><a href="userindex.php">Users</a></p></td><td width="16%"><p><a href="calendar.php">Calendar</a></p></td><td width="16%"><p><a href="editProfile.php">Profile</a></p></td><td width="16%"><p><a href="logout.php">Logout</a></p></td>
 </tr>
 </table>
 </div>
